[package]
name = "cxst"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Show Codex account and rate-limit status without opening the TUI."

[[bin]]
name = "cxst"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
codex-backend-client = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-backend-client" }
codex-core = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-core" }
codex-login = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-login" }
codex-model-provider = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-model-provider" }
codex-protocol = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-protocol" }
codex-utils-absolute-path = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-utils-absolute-path" }
codex-utils-cli = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-utils-cli" }
codex-utils-sandbox-summary = { git = "https://github.com/mkusaka/codex", rev = "ebd948fce23387349b764d16ea0b54e97e677a62", package = "codex-utils-sandbox-summary" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
